<resources>
    <string name="app_name">WallApp</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_wallpaper">Select screen</string>
    <string name="home_screen">Home screen</string>
    <string name="lock_screen">Lock screen</string>
    <string name="both">Both</string>
    <string name="wallpaper_filter">Wallpaper filters</string>
    <string name="latest">Latest</string>
    <string name="popular">Popular</string>
    <string name="illustration">Illustration</string>
    <string name="photo">Photo</string>
    <string name="cancel">CANCEL</string>
</resources>
