<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/wallpaper_filter"
        android:textAlignment="center"
        android:textColor="@color/colorBlackGray"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/latest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/latest"
        android:textColor="@color/colorBlackGray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/popular"
        android:textColor="@color/colorBlackGray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/illustration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/illustration"
        android:textColor="@color/colorBlackGray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/photo"
        android:textColor="@color/colorBlackGray"
        android:textSize="16sp" />

</LinearLayout>

