<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:foregroundTint="@color/colorBlack"
    android:layout_gravity="center"
    android:elevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/title_wallpaper"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/home_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/home_screen"
            android:textColor="@color/colorBlackGray"
            android:textSize="16sp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/lock_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/lock_screen"
            android:textColor="@color/colorBlackGray"
            android:textSize="16sp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/both_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/both"
            android:textColor="@color/colorBlackGray"
            android:textSize="16sp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/cancel_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/cancel"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:layout_gravity="end"
            android:clickable="true" />

    </LinearLayout>

</androidx.cardview.widget.CardView>